--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,6 +26,8 @@
 	<meta name="msapplication-wide310x150logo" content="icons/mstile-310x150.png" />
 	<meta name="msapplication-square310x310logo" content="icons/mstile-310x310.png" />
 
+	<script data-ad-client="ca-pub-9566766938460205" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
  
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
