--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,28 +5,23 @@
   {%- seo -%}
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
 
-  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="icons/apple-touch-icon-57x57.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="icons/apple-touch-icon-114x114.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="icons/apple-touch-icon-72x72.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="icons/apple-touch-icon-144x144.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="60x60" href="icons/apple-touch-icon-60x60.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="120x120" href="icons/apple-touch-icon-120x120.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="76x76" href="icons/apple-touch-icon-76x76.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="icons/apple-touch-icon-152x152.png" />
-	<link rel="icon" type="image/png" href="icons/favicon-196x196.png" sizes="196x196" />
-	<link rel="icon" type="image/png" href="icons/favicon-96x96.png" sizes="96x96" />
-	<link rel="icon" type="image/png" href="icons/favicon-32x32.png" sizes="32x32" />
-	<link rel="icon" type="image/png" href="icons/favicon-16x16.png" sizes="16x16" />
-	<link rel="icon" type="image/png" href="icons/favicon-128.png" sizes="128x128" />
-	<meta name="application-name" content="&nbsp;"/>
-	<meta name="msapplication-TileColor" content="#FFFFFF" />
-	<meta name="msapplication-TileImage" content="icons/mstile-144x144.png" />
-	<meta name="msapplication-square70x70logo" content="icons/mstile-70x70.png" />
-	<meta name="msapplication-square150x150logo" content="icons/mstile-150x150.png" />
-	<meta name="msapplication-wide310x150logo" content="icons/mstile-310x150.png" />
-	<meta name="msapplication-square310x310logo" content="icons/mstile-310x310.png" />
-
-  <script data-ad-client="ca-pub-9566766938460205" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <link rel="apple-touch-icon" sizes="57x57" href="/meta/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/meta/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/meta/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/meta/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/meta/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/meta/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/meta/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/meta/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/meta/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="/meta/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/meta/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/meta/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/meta/favicon-16x16.png">
+  <link rel="manifest" href="/meta/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/meta/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
  
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
