--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
+  {% seo %}
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
 
   <link rel="apple-touch-icon" sizes="57x57" href="/meta/apple-icon-57x57.png">
