--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -18,15 +18,30 @@ layout: default
     {% endcomment %}
     {% assign sorted = site.github.public_repositories | sort: 'updated_at' | reverse %}
   	{% for repository in sorted %}
-      <li>
+      <li class="repository">
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        <span class="post-meta">{{ repository.updated_at | date: date_format }}</span>
-        <h3>
+        <span class="post-meta">
+          {{ repository.created_at | date: date_format }}
+          -
+          last commit {{ repository.updated_at | date: date_format }}
+        </span>
+        <h3 class="title">
           <a class="post-link no-tooltip" href="{{ repository.html_url }}">
             {{ repository.name | escape }}
           </a>
         </h3>
-        {{ repository.description }}
+        <span class="language {{ repository.language | escape | downcase | slugify }}">
+          {{ repository.language | escape }}
+        </span>
+        {%- if repository.license -%}
+        <span class="licence">
+          {% octicon law %}
+          {{ repository.license.spdx_id | escape }}
+        </span>
+        {% endif %}
+        <p class="description">
+          {{ repository.description | escape }}
+        </p>
       </li>
 		{% endfor %}
     </ul>	
