--- a/_sass/custom/_landing.scss
+++ b/_sass/custom/_landing.scss
@@ -9,6 +9,8 @@
 	#profile {
 		margin: 1rem;
 		width: 200px;
+		height: 200px;
+		object-fit: cover;
 		-webkit-border-radius: 50%;
 		-moz-border-radius: 50%;
 		border-radius: 50%;
